--- a/.github/workflows/build-browser.yml
+++ b/.github/workflows/build-browser.yml
@@ -25,8 +25,8 @@ jobs:
     env:
       SOLUTION_FILE_PATH: ./Client App/NetLibBrowser.sln
       BUILD_CONFIGURATION: Release
-      BUILD_PLATFORM: x86
-      BUILD_PLATFORM2: Win32
+      BUILD_PLATFORM: Win32
+      BUILD_PLATFORM2: Win32 (XP)
       BUILD_TOOLSET: v141_xp
       BUILD_DIRECTORY: ./Client App/Release
       WXWIN: C:/wxWidgets/
@@ -60,7 +60,7 @@ jobs:
       - name: Compile wxWidgets
         run: |
           cd C:/wxWidgets/build/msw
-          msbuild /m /p:Configuration=${{ env.BUILD_CONFIGURATION }} /p:Platform=${{ env.BUILD_PLATFORM2 }} /p:PlatformToolset=${{ env.BUILD_TOOLSET }} wx_vc16.sln
+          msbuild /m /p:Configuration=${{ env.BUILD_CONFIGURATION }} /p:Platform=${{ env.BUILD_PLATFORM }} /p:PlatformToolset=${{ env.BUILD_TOOLSET }} wx_vc16.sln
 
       - name: Download UNFLoader
         run: |
@@ -72,7 +72,7 @@ jobs:
       - name: Compile UNFLoader
         run: |
           cd C:/N64-UNFLoader/UNFLoader
-          msbuild /m /p:Configuration=${{ env.BUILD_CONFIGURATION }} /p:Platform=${{ env.BUILD_PLATFORM2 }} /p:PlatformToolset=${{ env.BUILD_TOOLSET }} FlashcartLib_Static.vcxproj
+          msbuild /m /p:Configuration=${{ env.BUILD_CONFIGURATION }} /p:Platform=${{ env.BUILD_PLATFORM }} /p:PlatformToolset=${{ env.BUILD_TOOLSET }} FlashcartLib_Static.vcxproj
 
       - uses: ilammy/msvc-dev-cmd@v1
         with:
@@ -83,7 +83,7 @@ jobs:
           cd "Client App/Include/"
           Copy-Item "C:/N64-UNFLoader/UNFLoader/Release/Flashcart.lib"
           cd ../..
-          msbuild /m /p:Configuration=${{ env.BUILD_CONFIGURATION }} /p:Platform=${{ env.BUILD_PLATFORM }} /p:PlatformToolset=${{ env.BUILD_TOOLSET }} "${{ env.SOLUTION_FILE_PATH }}"
+          msbuild /m /p:Configuration=${{ env.BUILD_CONFIGURATION }} /p:Platform=${{ env.BUILD_PLATFORM2 }} /p:PlatformToolset=${{ env.BUILD_TOOLSET }} "${{ env.SOLUTION_FILE_PATH }}"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
