--- a/.gitignore
+++ b/.gitignore
@@ -417,7 +417,9 @@ bin2c
 *.cvt
 Client App/Include/flashcart.a
 Client App/Include/Flashcart.lib
+Client App/Include/Flashcart_x64.lib
 Client App/Include/flashcart_d.a
 Client App/Include/Flashcart_d.lib
+Client App/Include/Flashcart_x64_d.lib
 
 !.github/**
